Fixes modal not showing up after closing

--- a/src/app/components/confirmation-modal/confirmation-modal.component.sass
+++ b/src/app/components/confirmation-modal/confirmation-modal.component.sass
@@ -83,4 +83,5 @@
         z-index: 1050
         padding: 40px 24px 24px 24px
         width: 100%
-        border-radius: 12px
+        border-top-right-radius: 12px
+        border-top-left-radius: 12px
